Fix header overflow

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -2,8 +2,7 @@
   display: flex;
   align-items: center;
 
-  width: 100%;
-  height: 56px;
+  min-height: 56px;
 
   padding-right: 1.625rem;
   padding-left: 1.625rem;
